[package]
name = "viking"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2018"
license = "MIT"
description = "viking"
homepage = "https://replicadse.github.io/viking-rs"
repository = "https://github.com/replicadse/viking-rs"
keywords = ["viking"]
categories = ["command-line-utilities"]

# [features]
#   default = []

[profile]
  [dev]
    opt-level = 0
  [release]
    opt-level = 3

[dependencies]
async-trait = "^0.1"
clap = "^2.34"
futures = "^0.3.0"
